Fix text in search input vertical align

--- a/contribs/gmf/less/search.less
+++ b/contribs/gmf/less/search.less
@@ -17,8 +17,7 @@ gmf-search {
     position: relative;
   }
   // the container with border decides of search height, not the child elements
-  .twitter-typeahead,
-  input {
+  .twitter-typeahead {
     height: 100%;
   }
   // hide the native "clear x" in Edge
@@ -60,6 +59,7 @@ gmf-search {
   .form-control {
     box-shadow: none;
     border: none;
+    height: 100%;
     &:focus {
       box-shadow: none;
     }
